--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,7 +3,7 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "Understanding the mechanics of the Anthem",
+    "tagline": "Understanding the mechanics of Anthem",
     "docs": {
       "doc1": {
         "title": "Latin-ish",
