--- a/website/blog/2016-03-11-blog-post.md
+++ b/website/blog/2016-03-11-blog-post.md
@@ -1,5 +1,5 @@
 ---
-title: Blog Title
+title: Placeholder Blog Entry
 author: Blog Author
 authorURL: http://twitter.com/
 authorFBID: 100002976521003
