--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -13,6 +13,10 @@
         "title": "Interceptor Mechanics",
         "sidebar_label": "Interceptor"
       },
+      "mechanics/damageFormula": {
+        "title": "Anthem Damage Formula",
+        "sidebar_label": "Damage Formula"
+      },
       "mechanics/damageTypes": {
         "title": "Damage Types",
         "sidebar_label": "Damage Types"
