fixed site config issues

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -39,7 +39,7 @@
       }
     },
     "links": {
-      "Docs": "Docs",
+      "Guide": "Guide",
       "Contributing": "Contributing",
       "Help": "Help",
       "Experiments": "Experiments"
